feat (jacinto): adapting template to Jacinto 2.0

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,15 +9,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>Jacinto 2.0 is a platform where you can create and/or solve clinical cases with learning purposes. Cases are distributed on several topics.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! </p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="https://github.com/jeromelachaud/freelancer-theme" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
-                    </a>
+                    <p>You can act as a learner, solving clinical cases inspired in the real world. You can likewise participate in creating new cases to be solved by others.</p>
                 </div>
             </div>
         </div>
