fix (link): post.url in link

--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -21,7 +21,7 @@
                             <ul class="list-inline item-details">
                                 {% if post.url %}
                                     <li>
-                                        <strong><a href="{{ post.client }}">Start Here</a>
+                                        <strong><a href="{{ post.url }}">Start Here</a>
                                         </strong>
                                     </li>
                                 {% endif %}
