fix (links): links to applications

--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -19,9 +19,9 @@
                                 <p>{{ post.description }}</p>
                             {% endif %}
                             <ul class="list-inline item-details">
-                                {% if post.url %}
+                                {% if post.application %}
                                     <li>
-                                        <strong><a href="https://harena.ds4h.org/space/{{ post.url }}">Start Here</a>
+                                        <strong><a href="https://harena.ds4h.org/space/{{ post.application }}/">Start Here</a>
                                         </strong>
                                     </li>
                                 {% endif %}
