refactor (text ux): change main image, modal text
 changed site title and main image. Added text below respective modal object. Added main.css code

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -79,6 +79,10 @@ hr.star-primary:after {
 .img-centered {
     margin: 0 auto;
 }
+.text-style{
+  font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+
+}
 
 header {
     text-align: center;
