--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -18,6 +18,7 @@
                                 </div>
                             </div>
                             <img src="img/portfolio/{{ post.img }}" class="img-responsive" alt="{{ post.alt }}">
+                            <figcaption class="text-center"><i class="fa"></i>{{ post.title }}</figcaption>
                         </a>
                     </div>
                 {% endfor %}
